--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -113,9 +113,8 @@
       align-items: flex-start
     &-text
       margin-bottom: 5px
-    &-title
-      &__strong
-        margin-bottom: 37px
+    &__title
+      margin-bottom: 37px
   .reviews
     &-title
       font-style: normal;
@@ -282,8 +281,6 @@
       font-weight: 300
       font-size: 20px
       line-height: 25px
-      margin-bottom: 0
-      margin-right: 0
       &__strong
         font-weight: 600;
         font-size: 30px;
@@ -295,6 +292,9 @@
       max-width: 245px
       margin-left: auto
       margin-right: auto
+    &-slider
+      &__text
+        text-align: left
   .activities
     padding-top: 90px
     &__card
